Make this command a bit nicer

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -11,6 +11,9 @@ commands:
       description: Toggle Enderchest Push capability in the current claim. (Put items in an EnderChest)
       permission: EnderHoppers.Manipulate
 permissions:
-  EmderHoppers.Manipulate:
+  EnderHoppers.Manipulate:
     description: Allows players to toggle Ender Hoppers for the current claim.
     default: true
+  EnderHoppers.Manipulate.byId:
+    description: Allows players to toggle Ender Hoppers for the current claim.
+    default: op
